--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,4 +1,5 @@
-bot.oauth.prefix=oauth:
-bot.oauth.token=
-bot.username=
-bot.channel=
+bot.client.oauth.prefix=oauth:
+bot.client.oauth.token=
+bot.client.username=
+bot.client.channel=
+bot.message.regexp=(?:^\\@(?<TAGS>[^ ]+) )?(?:\\:(?:(?<NICK>\\S+?)(?:\\!(?<USER>\\S+?))?(?:\\@(?<HOST>\\S+?))?)[ ]+?)?(?<CMD>[a-zA-Z]+|[0-9]{3})(?<PARAMS>.*)
