service almost done and little modifications

--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,3 +1,4 @@
 bot.message.regexp=(?:^\\@(?<TAGS>[^ ]+) )?(?:\\:(?:(?<NICK>\\S+?)(?:\\!(?<USER>\\S+?))?(?:\\@(?<HOST>\\S+?))?)[ ]+?)?(?<CMD>[a-zA-Z]+|[0-9]{3})(?<PARAMS>.*)
 bot.client.oauth.prefix=oauth:
-bot.twitch.url=
+bot.twitch.port=6667
+bot.twitch.url=irc.chat.twitch.tv
