--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -1,3 +1,3 @@
-bot.client.oauth.token=
-bot.client.username=
-bot.client.channel=
+user.client.oauth.token=
+user.client.username=
+user.client.channel=
