--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -1,3 +1,3 @@
 user.client.oauth.token=
-user.client.username=
-user.client.channel=
+user.client.username=kotlikBotTest
+user.client.channel=xloginrandom
