--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -2,4 +2,6 @@ bot.message.regexp=(?:^\\@(?<TAGS>[^ ]+) )?(?:\\:(?:(?<NICK>\\S+?)(?:\\!(?<USER>
 bot.client.oauth.prefix=oauth:
 bot.twitch.port=6667
 #bot.twitch.url=irc.chat.twitch.tv
+#bot.class.service.runner=kotlik.chatbot.controller.MessageService
 bot.twitch.url=irc.freenode.net
+bot.class.service.runner=kotlik.chatbot.controller.FreeMessageService
