MessageFormatter and MessageParser

--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,4 +1,5 @@
 bot.message.regexp=(?:^\\@(?<TAGS>[^ ]+) )?(?:\\:(?:(?<NICK>\\S+?)(?:\\!(?<USER>\\S+?))?(?:\\@(?<HOST>\\S+?))?)[ ]+?)?(?<CMD>[a-zA-Z]+|[0-9]{3})(?<PARAMS>.*)
+bot.message.no.tags.regexp=(?:\\:(?:(?<NICK>\\S+?)(?:\\!(?<USER>\\S+?))?(?:\\@(?<HOST>\\S+?))?)[ ]+?)?(?<CMD>[a-zA-Z]+|[0-9]{3})(?<PARAMS>.*)
 bot.client.oauth.prefix=oauth:
 bot.twitch.port=6667
 #bot.twitch.url=irc.chat.twitch.tv
