--- a/pom.xml
+++ b/pom.xml
@@ -105,5 +105,13 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.8.0-beta2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.23.1</version>
+        </dependency>
+
     </dependencies>
 </project>
