--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,6 +6,7 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %l - %m%n
 log4j.appender.file.File=LOG/output.log
 log4j.appender.file.MaxFileSize=1000KB
+log4j.appender.file.MaxBackupIndex=9
 log4j.appender.file.encoding=UTF-8
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
