rolling policy and config reloading

--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,7 +1,7 @@
 bot.message.regexp=(?:^\\@(?<TAGS>[^ ]+) )?(?:\\:(?:(?<NICK>\\S+?)(?:\\!(?<USER>\\S+?))?(?:\\@(?<HOST>\\S+?))?)[ ]+?)?(?<CMD>[a-zA-Z]+|[0-9]{3})(?<PARAMS>.*)
 bot.client.oauth.prefix=oauth:
 bot.twitch.port=6667
-#bot.twitch.url=irc.chat.twitch.tv
-#bot.class.service.runner=kotlik.chatbot.controller.MessageService
-bot.twitch.url=irc.freenode.net
-bot.class.service.runner=kotlik.chatbot.controller.FreeMessageService
+bot.twitch.url=irc.chat.twitch.tv
+bot.class.service.runner=kotlik.chatbot.controller.MessageService
+#bot.twitch.url=irc.freenode.net
+#bot.class.service.runner=kotlik.chatbot.controller.FreeMessageService
