--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,13 +1,16 @@
 # Root logger option 
-log4j.rootLogger=DEBUG, file, Console
+log4j.rootLogger=DEBUG, LOGFILE, Console
 # File appender 
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %l - %m%n
-log4j.appender.file.File=LOG/output.log
-log4j.appender.file.MaxFileSize=1000KB
-log4j.appender.file.MaxBackupIndex=9
-log4j.appender.file.encoding=UTF-8
+log4j.appender.LOGFILE=org.apache.log4j.rolling.RollingFileAppender
+log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %l - %m%n
+log4j.appender.LOGFILE.rollingPolicy=org.apache.log4j.rolling.FixedWindowRollingPolicy
+log4j.appender.LOGFILE.rollingPolicy.maxIndex=9
+log4j.appender.LOGFILE.triggeringPolicy=org.apache.log4j.rolling.SizeBasedTriggeringPolicy
+log4j.appender.LOGFILE.triggeringPolicy.MaxFileSize=20
+log4j.appender.LOGFILE.rollingPolicy.FileNamePattern=LOG/output-%i.log
+log4j.appender.LOGFILE.rollingPolicy.ActiveFileName=LOG/output.log
+log4j.appender.LOGFILE.encoding=UTF-8
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p - %m%n
