--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
 log4j.appender.LOGFILE.File=LOG/output.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.encoding=UTF-8
-log4j.appender.LOGFILE.MaxFileSize=15KB
+log4j.appender.LOGFILE.MaxFileSize=15kB
 log4j.appender.LOGFILE.MaxBackupIndex=9
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %l - %m%n
