--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,17 +1,17 @@
-# Root logger option 
-log4j.rootLogger=DEBUG, LOGFILE, Console
-# File appender 
-log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
-log4j.appender.LOGFILE.File=LOG/output.log
-log4j.appender.LOGFILE.Append=true
-log4j.appender.LOGFILE.encoding=UTF-8
-log4j.appender.LOGFILE.MaxFileSize=15kB
-log4j.appender.LOGFILE.MaxBackupIndex=9
-log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %l - %m%n
-# Console
-log4j.appender.Console=org.apache.log4j.ConsoleAppender
-log4j.appender.Console.Target=System.out
-log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p - %m%n
-log4j.appender.Console.encoding=UTF-8
+## Root logger option
+#log4j.rootLogger=DEBUG, LOGFILE, Console
+## File appender
+#log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
+#log4j.appender.LOGFILE.File=LOG/output.log
+#log4j.appender.LOGFILE.Append=true
+#log4j.appender.LOGFILE.encoding=UTF-8
+#log4j.appender.LOGFILE.MaxFileSize=15kB
+#log4j.appender.LOGFILE.MaxBackupIndex=9
+#log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %l - %m%n
+## Console
+#log4j.appender.Console=org.apache.log4j.ConsoleAppender
+#log4j.appender.Console.Target=System.out
+#log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+#log4j.appender.Console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p - %m%n
+#log4j.appender.Console.encoding=UTF-8
